<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:menuCategory="container">
        <item
            android:id="@+id/owner"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/owner" />
        <item
            android:id="@+id/my_bag"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_bag" />
        <item
            android:id="@+id/around_me"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/around_me" />
    </group>

    <group android:menuCategory="container" android:checkableBehavior="single" android:orderInCategory="100">
        <item android:id="@+id/action_settings"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/action_settings" />
    </group>
</menu>
